# landscape_metrics

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_chunked.py
docs/: methods.md  metrics.md  references.bib
docs/superpowers/plans/: 2026-07-16-chunked-validation-hardening.md  2026-07-16-pylandstats-informed-v0-1-improvements.md  2026-07-16-release-engineering.md  2026-07-16-standard-metric-names-latex.md  2026-07-16-v0-1-out-of-core-backend.md  2026-07-16-v0-1-raster-api.md
docs/superpowers/progress/: 2026-07-16-v0-1-development-progress.md
docs/superpowers/specs/: 2026-07-15-open-landscape-metrics-design.md  2026-07-16-chunked-validation-hardening.md  2026-07-16-out-of-core-backend-design.md  2026-07-16-pylandstats-informed-v0-1-improvements.md  2026-07-16-release-engineering.md
src/landscape_metrics/: __init__.py  api.py  chunked.py  errors.py  io.py  metadata.py  metric_cards.yaml  models.py  selection.py  topology.py
src/landscape_metrics/metrics/: __init__.py  class_level.py  landscape.py  patch.py  summary.py
tests/: test_api.py  test_benchmark.py  test_chunked.py  test_class_metrics.py  test_io.py  test_landscape_metrics.py  test_metric_cards.py  test_models.py  test_patch_metrics.py  test_release_docs.py  test_topology.py
tools/: render_metric_cards.py
