[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "landscape-metrics"
version = "0.1.0a0"
description = "Open, reproducible landscape metrics for categorical rasters"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=2.0,<2.5",
  "pandas>=2.2",
  "rasterio>=1.3",
  "scipy>=1.13",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "mypy>=1.11",
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["pandas", "rasterio", "rasterio.*", "yaml"]
ignore_missing_imports = true

[tool.hatch.build]
include = ["src/landscape_metrics/metric_cards.yaml"]
